<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.example.crowth.ui.explorer.ExplorerViewModel" />

        <variable
            name="adapter"
            type="com.example.crowth.ui.explorer.jobList.JobListAdapter" />
    </data>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_marginBottom="16dp"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/search_view_background"
        app:queryBackground="@android:color/transparent"
        android:queryHint="@string/search_hint"
        android:textColorHint="@color/gray_input"
        app:searchIcon="@drawable/ic_search_view"
        android:focusableInTouchMode="true"
        app:iconifiedByDefault="false"
        android:clickable="true"
        android:imeOptions="actionSearch"
        android:focusable="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </androidx.appcompat.widget.SearchView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/find_jobs"
        app:layout_constraintTop_toBottomOf="@+id/search_view"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="22dp"
        app:srcCompat="@drawable/ic_find_jobs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/help_others"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/search_view"
        app:layout_constraintStart_toEndOf="@+id/find_jobs"
        app:layout_constraintEnd_toStartOf="@+id/find_candidates"
        app:srcCompat="@drawable/ic_help_others"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/find_candidates"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="22dp"
        app:layout_constraintTop_toBottomOf="@+id/search_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_find_candidates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <FrameLayout
        android:id="@+id/main_image_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/find_candidates"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/main_image_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/find_candidates"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="8dp"
        android:elevation="10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/main_image_view"
            android:layout_width="match_parent"
            android:layout_height="226dp"
            android:src="@drawable/photo1"
            android:background="@color/white"
            android:scaleType="centerCrop" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_gravity="bottom|end">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/black_live_matter"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                app:srcCompat="@drawable/ic_baseline_arrow_forward_24"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/header1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        style="@style/RobotoTextViewStyle.Header"
        app:layout_constraintTop_toBottomOf="@+id/main_image_container"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/help_friends_and_get_paid" />

    <com.github.rubensousa.gravitysnaphelper.GravitySnapRecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="188dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:adapter="@{adapter}"
        app:submitList="@{viewModel.jobOffers}"
        app:snapGravity="start"
        app:layout_constraintTop_toBottomOf="@+id/header1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/header2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        style="@style/RobotoTextViewStyle.Header"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/help_friends_and_get_paid" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

</layout>